# chnu.computer-vision

./: .gitignore  CLAUDE.md  pyproject.toml
lab-01_intro/: homework.ipynb  pyproject.toml
lab-02_pixel-ops/: homework.ipynb
lab-02_pixel-ops/data/: wall.avif
lab-03_unsharp-masking/: homework.ipynb
lab-07_image-matching/: homework.qmd
lab-09-face-detection/: README.md  demo.py  homework.py  live_report.md  live_test.py  report.py
lab-10_object-tracking/: README.md  REPORT.md  config.json  demo.py
