[project]
name = "chnu.computer-vision"
version = "0.1.0"
description = "CNHU CV2026 course"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter-cache>=1.0.1",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pyyaml>=6.0.3",
]
